# stm32-build-system

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md  stm32-build-system.ioc
Core/Inc/: main.h
Core/Src/: main.c  stm32l4xx_it.c
